# bomberman_game

./: .gitignore  CLAUDE.md  README  pyproject.toml
assets/powerups/: bomb.ppm  flame.ppm
assets/sprites/: bomb.ppm  player1.ppm  player2.ppm
assets/tiles/: destructible.ppm  floor.ppm  solid.ppm
src/: main.py
src/bomberman/: arena.py  assets.py  config.py  entities.py  game_state.py  input.py
tests/: test_game_state.py
