[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bomberman-game"
version = "0.1.0"
description = "Game Boy inspired Bomberman clone"
readme = "README"
authors = [{name = "Bomberman Dev"}]
requires-python = ">=3.10"
dependencies = ["pygame>=2.1.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
